--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,9 +12,9 @@ spring:
           filters: stat
           driver-class-name: com.mysql.jdbc.Driver
           #基本属性
-          url: jdbc:mysql://127.0.0.1:3306/lu_tale?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+          url: jdbc:mysql://39.106.44.226:3306/my-site?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
           username: root
-          password: mac123
+          password: root
           #配置初始化大小/最小/最大
           initial-size: 1
           min-idle: 1
@@ -69,8 +69,8 @@ swagger:
   show: true
 
 qiniu:
-  accesskey: ""
-  serectkey: ""
-  bucket: ""
+  accesskey: "e32rGYwyWiZ_2UVSCExHKcLvrNVGzF8cciuiL3mM"
+  serectkey: "5j08nyjRMYOYEvHdsqNsGDN6An4VDKrxmXRrN1l3"
+  bucket: "picture"
   cdn:
-    url: ""
+    url: "qiniu.emmazhang.top"
